bugfix: remove duplicate scrollbar

--- a/src/app/components/stepper/stepper.component.css
+++ b/src/app/components/stepper/stepper.component.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    overflow: hidden;
+    padding: 20px;
   }
 
 /* .stepper-container {
